# Semantic-Correspondence

./: .gitignore  AML.ipynb  AML_Analysis.ipynb  AML_Colab.ipynb  AML_Local.ipynb  Analysis_Local.ipynb  CLAUDE.md  CambioBatch.md  README.md  config.yaml  documentation.md  pyproject.toml  requirements.txt  setup.py
data/: __init__.py  dataset.py  interface.py  paths.py  pf_dataset.py
docs/: claude.md  info.md  plan.md  references.md  state-of-art.md  stato-arte.md  test_report.md
evaluation/: __init__.py  baseline_eval.py  checkpoint_loader.py  experiment_runner.py  figures.py  pck.py  qualitative.py  sd4match_metrics.py  visualize.py
models/: __init__.py
notebooks/: _generate_aml_colab.py  _generate_aml_local.py  notebook_config.example.yaml  verify_and_compare_results.ipynb
report/: build.sh
scripts/: _training_common.py  audit_first_party_comments.py  bootstrap_venv.sh  download_pf_datasets.py  download_pretrained_weights.py  download_sam_vit_b.sh  eval_baseline.py  kill_pipeline.sh  pipeline_dashboard.py  reconnect_dashboard.sh  run_pipeline.py  start_dashboard.sh  start_pipeline_and_dashboard.sh  start_pipeline_detached.sh  train.py  train_finetune.py  train_lora.py  verify_dataset.py
tests/: conftest.py  test_dataset.py  test_dataset_loader_workers.py  test_dense_extractor.py  test_dino_backbones.py  test_experiment_runner.py  test_figures.py  test_hardware.py  test_lora.py  test_matching.py  test_notebook_workflow.py  test_pck.py  test_pf_dataset.py  test_pipeline_state.py  test_preprocessing.py  test_qualitative.py  test_run_pipeline_config.py  (+8 more)
(+65 files in other folders)
