[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-correspondence"
version = "0.1.0"
description = "Semantic correspondence with visual foundation models (PyTorch)"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "numpy>=1.24.0",
  "Pillow>=10.0.0",
  "matplotlib>=3.7.0",
  "tqdm>=4.65.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.1.0",
]
notebook = [
  "jupyter>=1.0.0",
  "ipykernel>=6.0.0",
  "pandas>=2.0.0",
]
dashboard = [
  "rich>=13.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "models*", "training*", "evaluation*", "utils*"]

[tool.ruff]
line-length = 100
target-version = "py39"
